--- a/ShogiClock/ShogiClock/ShogiClock.csproj
+++ b/ShogiClock/ShogiClock/ShogiClock.csproj
@@ -130,6 +130,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Sources\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
