floodgateの棋譜読めない

--- a/ShogiClock/ShogiClock/ShogiClock.csproj
+++ b/ShogiClock/ShogiClock/ShogiClock.csproj
@@ -82,6 +82,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\CsaFile.cs" />
     <Compile Include="UserControls\ClockUserControl.xaml.cs">
       <DependentUpon>ClockUserControl.xaml</DependentUpon>
     </Compile>
@@ -130,8 +131,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Sources\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
