--- a/ShogiClock/ShogiClock/ShogiClock.csproj
+++ b/ShogiClock/ShogiClock/ShogiClock.csproj
@@ -83,7 +83,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Models\CsaFile.cs" />
-    <Compile Include="UserControls\ClockUserControl.xaml.cs">
+    <Compile Include="Views\ClockUserControl.xaml.cs">
       <DependentUpon>ClockUserControl.xaml</DependentUpon>
     </Compile>
     <Page Include="Views\MainWindow.xaml">
@@ -95,11 +95,12 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ViewModels\ClockViewModel.cs" />
+    <Compile Include="ViewModels\Monitoring.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="UserControls\ClockUserControl.xaml">
+    <Page Include="Views\ClockUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
